--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,66 @@
   <body>
     <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+      <fieldset>
+        <legend>Personal information</legend>
+        <div class="formfield">
+          Surname: <input type="text" name="surname">
+        </div>
+        <div class="formfield">
+          Name: <input type="text" name="name">
+        </div>
+        <div class="formfield">
+          How old are You? <input type="number" name="age">
+        </div>
+        <div class="formfield">
+          Full date of birth: <input type="date" name="birthdate">
+        </div>
+        <div class="formfield">
+        </div>
+          I accept the term of the agreement<input type="checkbox" name="terms">
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend>Rgistration</legend>
+        <div class="formfield">
+          E-mail: <input type="text" name="email">
+        </div>
+        <div class="formfield">
+          Password: <input type="password" name="password">
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend>An interesting fact about you!</legend>
+        <div class="formfield">
+          Do you love cats? <input type="radio" name="cat-love">
+        </div>
+        <div class="formfield">
+          What is your favorite color? <input type="color" name="favcolor">
+        </div>
+        <div class="formfield">
+          What time do you go to bed? <input type="time" name="bedtime">
+        </div>
+        <div class="formfield">
+          What are your favorite brand of cars? <input type="range" name="cars">
+        </div>
+        <div class="formfield">
+          How do you rate our work? <input type="text" name="workrate">
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend>Additonal info:</legend>
+        <div class="formfield">
+          Comments: <input type="textarea">
+        </div>
+        <div class="formfield">
+          Whould you recommend us? <input type="text">
+        </div>
+      </fieldset>
+      <input class="formfield"
+        type="submit"
+        name="submit"
+        id="">
+    </form>
   </body>
 </html>
