--- a/src/index.html
+++ b/src/index.html
@@ -16,63 +16,80 @@
     <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
       <fieldset>
         <legend>Personal information</legend>
-        <div class="formfield">
-          Surname: <input type="text" name="surname">
-        </div>
-        <div class="formfield">
-          Name: <input type="text" name="name">
-        </div>
-        <div class="formfield">
-          How old are You? <input type="number" name="age">
-        </div>
-        <div class="formfield">
-          Full date of birth: <input type="date" name="birthdate">
-        </div>
-        <div class="formfield">
-        </div>
-          I accept the term of the agreement<input type="checkbox" name="terms">
-        </div>
+        <label for="surname" class="form-field">
+          Surname: <input id="surname"
+          type="text"
+          name="surname">
+        </label>
+        <label for="name" class="form-field">
+          Name: <input id="name"
+          type="text" name="name">
+        </label>
+        <label for="age" class="form-field">
+          How old are You? <input id="age"
+           type="number"
+           name="age">
+        </label>
+        <label for="birth-date" class="form-field">
+          Full date of birth: <input id="birth-date"
+          type="date"
+          name="birth-date">
+        </label>
+        <label for="terms" class="form-field">
+        </label>
+          I accept the term of the agreement<input id="terms"
+          type="checkbox" name="terms">
+        </label>
       </fieldset>
       <fieldset>
         <legend>Rgistration</legend>
-        <div class="formfield">
-          E-mail: <input type="text" name="email">
-        </div>
-        <div class="formfield">
-          Password: <input type="password" name="password">
-        </div>
+        <label for="email" class="form-field">
+          E-mail: <input id="email"
+          type="text" name="email">
+        </label>
+        <label for="password" class="form-field">
+          Password: <input id="password"
+          type="password" name="password">
+        </label>
       </fieldset>
       <fieldset>
         <legend>An interesting fact about you!</legend>
-        <div class="formfield">
-          Do you love cats? <input type="radio" name="cat-love">
-        </div>
-        <div class="formfield">
-          What is your favorite color? <input type="color" name="favcolor">
-        </div>
-        <div class="formfield">
-          What time do you go to bed? <input type="time" name="bedtime">
-        </div>
-        <div class="formfield">
-          What are your favorite brand of cars? <input type="range" name="cars">
-        </div>
-        <div class="formfield">
-          How do you rate our work? <input type="text" name="workrate">
-        </div>
+        <label for="cat-love" class="form-field">
+          Do you love cats? <input id="cat-love"
+          type="radio" name="cat-love">
+        </label>
+        <label for="favcolor" class="form-field">
+          What is your favorite color? <input id="favcolor"
+          type="color" name="favcolor">
+        </label>
+        <label for="bedtime" class="form-field">
+          What time do you go to bed? <input id="bedtime"
+          type="time" name="bedtime">
+        </label>
+        <label for="cars" class="form-field">
+          What are your favorite brand of cars? <input id="cars"
+          type="range" name="cars">
+        </label>
+        <label for="workrate" class="form-field">
+          How do you rate our work? <input id="workrate"
+          type="text" name="workrate">
+        </label>
       </fieldset>
       <fieldset>
         <legend>Additonal info:</legend>
-        <div class="formfield">
-          Comments: <input type="textarea">
-        </div>
-        <div class="formfield">
-          Whould you recommend us? <input type="text">
-        </div>
+        <label for="info" class="form-field">
+          Comments: <input id="info"
+          type="textarea" name="info">
+        </label>
+        <label for="recom" class="form-field">
+          Whould you recommend us? <input id="recom"
+          type="text" name="recom">
+        </label>
       </fieldset>
-      <input class="formfield"
+      <input class="form-field"
         type="submit"
         name="submit"
-        id="">
+        id="sbi">
     </form>
   </body>
 </html>
