--- a/src/index.html
+++ b/src/index.html
@@ -11,105 +11,175 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="POST"
-    onsubmit="onSubmit()">
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="POST"
+      onsubmit="onSubmit()"
+    >
       <fieldset class="field">
         <legend>Personal information</legend>
-
         <label for="surname" class="form-field">
-          Surname: <input id="surname"
-          required
-          type="text"
-          name="surname">
+          Surname:
+          <input
+            id="surname"
+            required
+            type="text"
+            name="surname"
+          >
         </label>
         <label for="name" class="form-field">
-          Name: <input id="name"
-          required
-          type="text"
-          name="name">
+          Name:
+          <input
+            id="name"
+            required
+            type="text"
+            name="name"
+          >
         </label>
         <label for="age" class="form-field">
-          How old are You? <input type="number"
-          name="age"
-          id="age"
-          value="12"
-          max="100"
-          min="10">
+          How old are You?
+          <input
+            type="number"
+            name="age"
+            id="age"
+            value="12"
+            max="100"
+            min="10"
+          >
         </label>
-        <label for="birth-date"
-          class="form-field">
+        <label
+          for="birth-date"
+          class="form-field"
+        >
           Full date of birth:
-          <input id="birth-date"
-          type="date"
-          name="birth-date">
+          <input
+            id="birth-date"
+            type="date"
+            name="birth-date"
+          >
         </label>
         <label for="terms" class="form-field">
         </label>
-          I accept the term of the agreement <input id="terms"
-          type="checkbox" name="terms">
+          I accept the term of the agreement
+        <input
+          id="terms"
+          type="checkbox"
+          name="terms"
+        >
         </label>
       </fieldset>
       <fieldset class="field">
         <legend>Registration</legend>
-        <label for="email" class="form-field">
-          E-mail: <input id="email" placeholder="email@example.com"
-          type="email"
-          name="email">
+        <label
+          for="email"
+          class="form-field"
+        >
+          E-mail:
+          <input
+            id="email"
+            placeholder="email@example.com"
+            type="email"
+            name="email"
+          >
         </label>
-        <label for="password" class="form-field">
-          Password: <input id="password"
-          minlength="6"
-          maxlength="12"
-          required
-          type="password"
-          name="password">
+        <label
+          for="password"
+          class="form-field"
+        >
+          Password:
+          <input
+            id="password"
+            minlength="6"
+            maxlength="12"
+            required
+            type="password"
+            name="password"
+          >
         </label>
       </fieldset>
       <fieldset class="field">
         <legend>An interesting fact about you!</legend>
-        <label
-          for="cat-love"
-          class="form-field">
-          Do you love cats? <input
-          value="true"
-          type="radio" name="cat-love"> yes
+        Do you love cats?
+        <label for="cat-love-yes">
           <input
-          id="cat-love"
-          value="false"
-          type="radio" name="cat-love"> no
+            id="cat-love-yes"
+            value="true"
+            type="radio"
+            name="cat-love"
+          >
         </label>
-        <label for="favcolor" class="form-field">
-          What is your favorite color? <input id="favcolor"
-          type="color" name="favcolor">
+        yes
+        <label for="cat-love-no">
+          <input
+            id="cat-love-no"
+            value="false"
+            type="radio"
+            name="cat-love"
+          >
         </label>
-        <label for="bedtime" class="form-field">
-          What time do you go to bed? <input id="bedtime"
-          type="time" name="bedtime">
+          no
+        <label
+          for="favcolor"
+          class="form-field"
+        >
+          What is your favorite color?
+          <input
+            id="favcolor"
+            type="color"
+            name="favcolor"
+          >
         </label>
-        <label for="cars" class="form-field">
+        <label
+          for="bedtime"
+          class="form-field"
+        >
+          What time do you go to bed?
+          <input
+            id="bedtime"
+            type="time"
+            name="bedtime"
+          >
+        </label>
+        <label
+          for="cars"
+          class="form-field"
+        >
           What are your favorite brand of cars?
-          <select id="cars"
-          multiple
-          name="cars">
+          <select
+            id="cars"
+            multiple
+            name="cars"
+          >
             <option value="bmw">BMW</option>
             <option value="audi">Audi</option>
             <option value="lada">Lada</option>
           </select>
         </label>
-        <label for="workrate" class="form-field">
-          How do you rate our work? <input id="workrate"
-          value="0"
-          max="100"
-          min="0"
-          type="range" name="workrate">
+        <label
+          for="workrate"
+          class="form-field"
+        >
+          How do you rate our work?
+          <input
+            id="workrate"
+            value="0"
+            max="100"
+            min="0"
+            type="range"
+            name="workrate"
+          >
         </label>
       </fieldset>
       <fieldset class="field">
         <legend>Additional info:</legend>
         <label for="info" class="form-field">
-          Comments: <textarea id="info"
-          type="textarea" name="info"
-         ></textarea>
+          Comments:
+          <textarea
+            id="info"
+            type="textarea"
+            name="info"
+          >
+          </textarea>
         </label>
         <label for="recom" class="form-field">
         Would you recommend us?
@@ -119,10 +189,12 @@
           </select>
         </label>
       </fieldset>
-      <button class="form-field"
+      <button
+        class="form-field"
         type="submit"
         name="submit"
-        id="submit">Submit
+        id="submit">
+      Submit
       </button>
     </form>
   </body>
