--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,8 @@
         class="form-field"
         type="submit"
         name="submit"
-        id="submit">
+        id="submit"
+      >
       Submit
       </button>
     </form>
